--- a/public/css/AdminLTE.css
+++ b/public/css/AdminLTE.css
@@ -162,7 +162,8 @@ h6,
 }
 /* General Links */
 a {
-  color: #d91818;
+  /*color: #d91818;*/
+  color: #72afd2;
 }
 a:hover,
 a:active,
@@ -4882,8 +4883,8 @@ table.text-center th {
   background: #f7f7f7;
 }
 .attachment-block .attachment-img {
-  max-width: 100px;
-  max-height: 100px;
+  max-width: 75px;
+  max-height: 75px;
   height: auto;
   float: left;
 }
